# sphericalpolygon

./: .gitignore  Makefile  README.md  comparison_tests.sh  crossing_tests.sh  mars_tests.sh  memory_tests.sh  memory_tests_no_preprocessing.sh  tennessee_tests.sh
cgal/: CMakeCache.txt  CMakeLists.txt  Makefile  NefPolygons.cpp  cmake_install.cmake
lib/lib/: Makefile
src/: Polygon.cpp  Polygon.hpp  SlicedPolygon.cpp  SlicedPolygon.hpp
src/main/: CompareEdgeMain.cpp  LoadInputMain.cpp  PreprocessMain.cpp
testpolygons/: Radiometer.csv  Square_72.csv  Tennessee.csv
testpolygons/Mars/: 001.csv  002.csv  003.csv  004.csv  005.csv  006.csv  007.csv  008.csv  009.csv  010.csv  011.csv  012.csv  013.csv  014.csv  015.csv  016.csv  017.csv  018.csv  019.csv  020.csv  021.csv  022.csv  023.csv  024.csv  025.csv  026.csv  027.csv  028.csv  029.csv  030.csv  031.csv  032.csv  033.csv  034.csv  035.csv  036.csv  037.csv  038.csv  039.csv  040.csv  (+584 more)
testpolygons/Tennessee/: Tennessee_1000.csv  Tennessee_10001.csv  Tennessee_10010.csv  Tennessee_10020.csv  Tennessee_10030.csv  Tennessee_10040.csv  Tennessee_10050.csv  Tennessee_10060.csv  Tennessee_10070.csv  Tennessee_10081.csv  Tennessee_10090.csv  Tennessee_10102.csv  Tennessee_1011.csv  Tennessee_10110.csv  Tennessee_10122.csv  Tennessee_10131.csv  Tennessee_10140.csv  Tennessee_10150.csv  Tennessee_10161.csv  Tennessee_10170.csv  Tennessee_10180.csv  Tennessee_10190.csv  Tennessee_1020.csv  Tennessee_10200.csv  Tennessee_10210.csv  (+2473 more)
testqueries/: Mars_Queries.csv  Square_72_Queries.csv  Tennessee_Queries.csv
(+2 files in other folders)
